# cli

./: .gitignore  Cargo.toml  README.md  build.rs  hop.json  hop.yml  install.sh
.github/: CODEOWNERS
.github/workflows/: release.yml
hop_leap/: Cargo.toml  build.rs
hop_leap/examples/: connect.rs
hop_leap/src/: errors.rs  lib.rs
hop_leap/src/heartbeat/: mod.rs  types.rs
hop_leap/src/leap/: mod.rs  types.rs
hop_leap/src/manager/: mod.rs  types.rs
hop_leap/src/messenger/: mod.rs  types.rs
hop_leap/src/runner/: mod.rs
hop_leap/src/shard/: error.rs  mod.rs  socket.rs  types.rs
scripts/: build.ps1  bump.sh  install.sh
src/: cli.rs  config.rs  lib.rs  macros.rs  main.rs  state.rs  types.rs  util.rs  utils.rs
src/commands/: mod.rs
src/commands/auth/: docker.rs  list.rs  login.rs  logout.rs  mod.rs  switch.rs  types.rs  utils.rs
src/commands/auth/login/: browser_auth.rs  flags_auth.rs  mod.rs  types.rs  util.rs
src/commands/auth/payment/: due.rs  list.rs  utils.rs
src/commands/channels/: create.rs  delete.rs  list.rs  message.rs  messages.rs  mod.rs  subscribe.rs  types.rs  utils.rs
src/commands/channels/tokens/: create.rs  delete.rs  list.rs  messages.rs  mod.rs  types.rs  utils.rs
src/commands/completions/: mod.rs
src/commands/containers/: create.rs  delete.rs  inspect.rs  list.rs  logs.rs  metrics.rs  mod.rs  recreate.rs  types.rs  update.rs  utils.rs
src/commands/deploy/: mod.rs  types.rs  util.rs
src/commands/deploy/builder/: mod.rs  types.rs  util.rs
src/commands/deploy/local/: mod.rs  types.rs  util.rs
src/commands/domains/: attach.rs  delete.rs  list.rs  mod.rs  types.rs  util.rs
src/commands/gateways/: create.rs  delete.rs  list.rs  mod.rs  types.rs  update.rs  util.rs
src/commands/ignite/: create.rs  delete.rs  from_compose.rs  get_env.rs  init.rs  inspect.rs  list.rs  mod.rs  promote.rs  rollout.rs  scale.rs  templates.rs  types.rs  update.rs  util.rs  utils.rs
src/commands/ignite/builds/: cancel.rs  list.rs  mod.rs  types.rs  utils.rs
src/commands/ignite/from_compose/: mod.rs  types.rs  utils.rs
src/commands/ignite/groups/: add.rs  create.rs  delete.rs  list.rs  mod.rs  move.rs  utils.rs
src/commands/ignite/health/: create.rs  delete.rs  list.rs  mod.rs  state.rs  types.rs  utils.rs
src/commands/info/: mod.rs
src/commands/link/: mod.rs
src/commands/oops/: mod.rs
src/commands/payment/: due.rs  list.rs  mod.rs  types.rs
src/commands/project/: create.rs  delete.rs  list.rs  ls.rs  mod.rs  switch.rs
src/commands/projects/: create.rs  delete.rs  info.rs  list.rs  mod.rs  switch.rs  types.rs  util.rs  utils.rs
src/commands/projects/create/: mod.rs  utils.rs
src/commands/projects/finance/: mod.rs  types.rs  utils.rs
src/commands/secrets/: delete.rs  list.rs  mod.rs  set.rs  types.rs  util.rs
src/commands/tunnel/: mod.rs  types.rs  utils.rs
src/commands/update/: checker.rs  command.rs  mod.rs  parse.rs  types.rs  util.rs
src/commands/volumes/: backup.rs  delete.rs  list.rs  mkdir.rs  mod.rs  move.rs  types.rs  utils.rs
src/commands/volumes/copy/: fslike.rs  mod.rs  utils.rs
src/commands/webhooks/: create.rs  delete.rs  list.rs  mod.rs  regenerate.rs  update.rs  utils.rs
src/commands/whoami/: mod.rs
src/docker/: types.rs
src/state/: http.rs  mod.rs  ws.rs
src/state/http/: mod.rs
src/state/ws/: mod.rs  types.rs  utils.rs
src/store/: auth.rs  context.rs  hopfile.rs  macros.rs  mod.rs  utils.rs
src/utils/: browser.rs  deser.rs  mod.rs  size.rs  sudo.rs
src/utils/arisu/: mod.rs  shard.rs  types.rs
test/.minio.sys/: format.json
test/.minio.sys/tmp/.trash/: c0065e98-1dc5-4950-bc55-e1a56ed1cd3c
