[package]
name = "hop-cli"
version = "0.2.48"
edition = "2021"
license = "MPL-2.0"
authors = ["Hop, Inc."]
description = "Interact with Hop in your terminal"
repository = "https://github.com/hopinc/hop_cli"
homepage = "https://hop.io"
build = "build.rs"
keywords = ["hop", "cli", "terminal", "console", "rust"]
categories = ["command-line-utilities"]

[profile.release]
strip = true
lto = true
panic = "abort"

[[bin]]
name = "hop"
path = "./src/main.rs"

[features]
default = []
update = []

[dependencies]
ms = "0.1"
log = "0.4"
dirs = "4.0"
regex = "1.6"
runas = "1.0"
anyhow = "1.0"
ignore = "0.4"
console = "0.15"
sys-info = "0.9"
tabwriter = "1.2"
tokio-tar = "0.3"
dialoguer = "0.10"
webbrowser = "0.8"
portpicker = "0.1"
serde_yaml = "0.9"
serde_json = "1.0"
serde_repr = "0.1"
async-trait = "0.1"
futures-util = "0.3"
clap_complete = "3.2"
clap = { version = "3.2", features = ["derive"] }
fern = { version = "0.6", features = ["colored"] }
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["server"] }
ctrlc = { version = "3.2", features = ["termination"] }
chrono = { version = "0.4", features = ["serde"] }
async_zip = { version = "0.0", features = ["full"] }
async-compression = { version = "0.3", features = ["tokio", "gzip"] }


# *nix only deps
[target.'cfg(all(not(windows), not(macos)))'.dependencies]
leap_client_rs = { version = "0.1", features = [
    "zlib",
    "rustls-tls-webpki-roots",
], default-features = false }
reqwest = { version = "0.11", features = [
    "json",
    "multipart",
    "rustls-tls-webpki-roots",
], default-features = false }
tokio-rustls = { version = "0.23", default-features = false }
webpki = "0.22"
webpki-roots = "0.22"
async-tungstenite = { version = "0.20", features = [
    "tokio-runtime",
    "tokio-rustls-webpki-roots",
] }


# windows only deps
[target.'cfg(any(windows, macos))'.dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "multipart",
    "native-tls",
], default-features = false }
leap_client_rs = { version = "0.1", features = [
    "zlib",
    "native-tls",
], default-features = false }
native-tls = "0.2"
tokio-native-tls = "0.3"
async-tungstenite = { version = "0.20", features = [
    "tokio-runtime",
    "tokio-native-tls",
] }


[target.'cfg(windows)'.build-dependencies]
chrono = "0.4"
winapi = { version = "0.3", features = ["winuser"] }
static_vcruntime = "2.0"
winres = "0.1"
